--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 spring.application.name=hardware-shopping
 
 # Configuração do PostgreSQL
-spring.datasource.url=jdbc:postgresql://postgres:5432/meu_banco
-spring.datasource.username=meu_usuario
-spring.datasource.password=minha_senha
+spring.datasource.url=jdbc:postgresql://postgres:5432/hardware_shopping
+spring.datasource.username=postgres
+spring.datasource.password=masterkey
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Hibernate
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
