--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
     depends_on:
       - postgres
     environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/meu_banco
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/hardware_shopping
       SPRING_DATASOURCE_USERNAME: su
       SPRING_DATASOURCE_PASSWORD: masterkey
     ports:
