--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=hardware-shopping
 
 # Configuração do PostgreSQL
-spring.datasource.url=jdbc:postgresql://postgres:5432/hardware_shopping
+spring.datasource.url=jdbc:postgresql://localhost:5432/hardware_shopping
 spring.datasource.username=postgres
 spring.datasource.password=masterkey
 spring.datasource.driver-class-name=org.postgresql.Driver
